--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.r2dbc.initialize-schema=always
 #Swagger
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.graphql.graphiql.enabled=true
+spring.jpa.show-sql=true
+logging.level.root=INFO
