Graph QL controller and schema added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ springdoc.swagger-ui.path=/swagger-ui.html
 spring.graphql.graphiql.enabled=true
 spring.jpa.show-sql=true
 logging.level.root=INFO
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %highlight(%-5level) %logger{36} - [%mdc] : %msg %n
